--- a/curriculum/challenges/english/15-javascript-algorithms-and-data-structures-22/learn-introductory-javascript-by-building-a-pyramid-generator/660f4e74f7fd3f4a99ac2e50.md
+++ b/curriculum/challenges/english/15-javascript-algorithms-and-data-structures-22/learn-introductory-javascript-by-building-a-pyramid-generator/660f4e74f7fd3f4a99ac2e50.md
@@ -16,7 +16,7 @@ numbers.shift();
 
 The `numbers` array would be `[2, 3]`.
 
-Directly below your `numbers` array, declare a `shifted` variable and assign it the result of calling `.shift()` on the `numbers` array. On the next line, log the `shifted` variable to the console.
+Directly below your `numbers` array, declare a `shifted` constant and assign it the result of calling `.shift()` on the `numbers` array. On the next line, log the `shifted` variable to the console.
 
 # --hints--
 
